# problem-reductions

./: .gitignore  Cargo.toml  Makefile  README.md
.claude/: CLAUDE.md  worklog-2026-02-16.md
.github/ISSUE_TEMPLATE/: problem.md
.github/workflows/: docs.yml
docs/paper/: reductions.typ  references.bib
docs/plans/: 2026-02-16-easy-additions-proposal.md  tasks.md  (+7 more)
examples/: chained_reduction_ksat_to_mis.rs  detect_isolated_problems.rs  export_examples.rs  export_schemas.rs  hamiltonian_path.rs  reduction_circuitsat_to_ilp.rs  reduction_factoring_to_ilp.rs  reduction_ilp_to_qubo.rs  reduction_kcoloring_to_ilp.rs  reduction_ksatisfiability_to_subsetsum.rs  reduction_maximumclique_to_ilp.rs  reduction_maximumindependentset_to_ilp.rs  reduction_maximumindependentset_to_qubo.rs  reduction_maximummatching_to_ilp.rs  reduction_maximumsetpacking_to_ilp.rs  reduction_minimumdominatingset_to_ilp.rs  reduction_minimumsetcovering_to_ilp.rs  reduction_minimumvertexcover_to_ilp.rs  reduction_minimumvertexcover_to_qubo.rs  reduction_qubo_to_ilp.rs  reduction_travelingsalesman_to_ilp.rs
problemreductions-cli/: Cargo.toml
problemreductions-macros/: Cargo.toml
problemreductions-macros/src/: lib.rs  parser.rs
scripts/: make_helpers.sh  pipeline_board.py  pipeline_checks.py  pipeline_pr.py  pipeline_skill_context.py  project_board_poll.py  project_board_recover.py  test_make_helpers.py  test_pipeline_board.py  test_pipeline_checks.py  test_pipeline_pr.py  test_pipeline_skill_context.py  test_project_board_poll.py
src/: export.rs  expr.rs  lib.rs  traits.rs  types.rs
(+281 files in other folders)
