[package]
name = "problemreductions-macros"
version = "0.4.0"
edition = "2021"
description = "Procedural macros for problemreductions"
license = "MIT"
repository = "https://github.com/CodingThrust/problem-reductions"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
